# osu_interfaces

./: .gitignore  IHitobject.py  IReplay.py  __init__.py  pyproject.toml
scripts/: clean.bat
src/: IBeatmap.py  IHitobject.py  __init__.py  gamemode.py
