[build-system]
requires      = [ "setuptools >= 64", 'setuptools_scm[toml] >=8 ' ]
build-backend = "setuptools.build_meta"

[project]
name            = "osu-interfaces"
description     = "Defines types used across the osu! analysis library suite"
readme          = "README.md"
requires-python = ">= 3.10"
dynamic         = [ "version" ]

dependencies = [
    "numpy >= 1.22.0, < 2.0.0",
]

[project.urls]
Homepage = "https://github.com/abraker-osu/osu_interfaces"

[tool.setuptools.package-dir]
osu_interfaces = "src"

[tool.setuptools_scm]
